[feat] weekly implemented db

--- a/internal/templates/weekly.templ
+++ b/internal/templates/weekly.templ
@@ -6,8 +6,8 @@ import (
 )
 
 
-templ Weekly() {
-	<p>weekly things test </p>
+templ Weekly(idk string) {
+	<p>weekly things test {idk}</p>
     <div class="calendar">
     <div class="timeline">
         <div class="spacer"></div>
