--- a/internal/templates/layout.templ
+++ b/internal/templates/layout.templ
@@ -40,7 +40,7 @@ templ nav() {
 					<a class="text-gray-200" href="/about">About</a>
 				</li>
 				<li>
-					<a class="text-gray-200" href="/weekly">Weekly</a>
+					<a class="text-gray-200" href="/weeklyList">WeeklyList</a>
 				</li>	
 			</ol>
 			<ol class="flex space-x-4">
