added QestionHandler, Qestion route, GetQestion + openQ + closeQ template

--- a/internal/templates/layout.templ
+++ b/internal/templates/layout.templ
@@ -43,6 +43,9 @@ templ nav() {
             <li>
                 <a class="text-gray-200 hover:text-white hover:bg-gray-700/50 px-6 py-3 rounded-lg transition-all duration-200 ease-in-out" href="/weeklyList">WeeklyList</a>
             </li>
+            <li>
+                <a class="text-gray-200 hover:text-white hover:bg-gray-700/50 px-6 py-3 rounded-lg transition-all duration-200 ease-in-out" href="/question">WeeklyList</a>
+            </li>
         </ol>
         <!-- Right-side user options -->
         <ol class="flex space-x-4">
